--- a/res/layout/activity_item.xml
+++ b/res/layout/activity_item.xml
@@ -12,5 +12,10 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:textSize="14sp" />
+    <TextView
+        android:id="@+id/lblAddress"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:textSize="14sp" />
 
 </RelativeLayout>
