--- a/res/layout/activity_item.xml
+++ b/res/layout/activity_item.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black" 
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/lblName"
-        android:layout_width="160dp"
-        android:layout_height="40dp"
-        android:textSize="14sp" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/white"/>
+
     <TextView
         android:id="@+id/lblAddress"
-        android:layout_width="160dp"
-        android:layout_height="40dp"
-        android:textSize="14sp" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@color/colorNum" />
 
-</RelativeLayout>
+</LinearLayout>
