--- a/res/layout/activity_item.xml
+++ b/res/layout/activity_item.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+       android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black" 
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/lblName"
-        android:layout_width="fill_parent"
+         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:text="@string/txtnombre"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/lblAddress"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_height="wrap_content"
+        android:text="@string/txtdireccion"
         android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/colorNum" />
+        android:textColor="@color/colorNum"  />
 
 </LinearLayout>
