--- a/res/layout/activity_cliente.xml
+++ b/res/layout/activity_cliente.xml
@@ -1,65 +1,59 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ClienteActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black" 
+    android:orientation="vertical" >
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
         android:text="No visita" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"              
         android:layout_marginBottom="22dp"
         android:text="Visita" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+   <TextView
+        android:id="@+id/lblClienteName"
+         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="26dp"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginLeft="5dp"
+        android:text="@string/txtnombre"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@android:color/white"/>
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/lblClienteAddress"
+        android:layout_width="fill_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="22dp"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+        android:text="@string/txtdireccion"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@color/colorNum"  />
+    
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/lblClientePhone"
+        android:layout_width="fill_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="22dp"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+        android:text="@string/txtdireccion"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@color/colorNum"  />
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/lblClienteField"
+        android:layout_width="fill_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/button1"
-        android:text=" Datos del cliente"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/txtdireccion"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@color/colorNum"  />
 
-</RelativeLayout>
+</LinearLayout>
